gcc/testsuite/rust/rustc/ui/parser/public-instead-of-pub-3_dg.rs
//@ run-rustfix
mod test {
    public const X: i32 = 123;
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {
    println!("{}", test::X);
}

